--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Contact all members of Congress",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dist": "mkdir -p dist && node_modules/webpack/bin/webpack.js index.js dist/hearme.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,13 @@
   "bugs": {
     "url": "https://github.com/dreki/hearme/issues"
   },
-  "homepage": "https://github.com/dreki/hearme#readme"
+  "homepage": "https://github.com/dreki/hearme#readme",
+  "dependencies": {
+    "backbone": "^1.3.3",
+    "jquery": "^3.1.0",
+    "lodash": "^4.13.1"
+  },
+  "devDependencies": {
+    "webpack": "^1.13.1"
+  }
 }
