--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/dreki/hearme#readme",
   "dependencies": {
     "backbone": "^1.3.3",
+    "bf-solid": "^2.2.0",
     "jquery": "^3.1.0",
     "lodash": "^4.13.1"
   },
